--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hash0",
+  "name": "hash0",
   "version": "2.0",
   "manifest_version": 2,
   "description": "Synchronizable PBKDF2 based password generator",
