--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
   "name": "hash0",
-  "version": "2.0",
+  "version": "2.1",
   "manifest_version": 2,
   "description": "Synchronizable PBKDF2 based password generator",
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": {
+        "16": "icons/icon16x16.png",
+        "32": "icons/icon32x32.png",
+        "48": "icons/icon48x48.png",
+        "64": "icons/icon64x64.png"
+    },
     "default_popup": "app/index.html"
   },
   "permissions": [
