--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,14 @@
   "manifest_version": 2,
   "description": "Synchronizable PBKDF2 based password generator",
   "browser_action": {
-    "default_icon": {
-        "16": "icons/icon16x16.png",
-        "32": "icons/icon32x32.png",
-        "48": "icons/icon48x48.png",
-        "64": "icons/icon64x64.png"
-    },
+    "default_icon": "icons/icon64x64.png",
     "default_popup": "app/index.html"
+  },
+  "icons": {
+    "16": "icons/icon16x16.png",
+    "32": "icons/icon32x32.png",
+    "48": "icons/icon48x48.png",
+    "64": "icons/icon64x64.png"
   },
   "permissions": [
     "tabs",
