--- a/package.json
+++ b/package.json
@@ -9,19 +9,16 @@
     "karma": "~0.10",
     "protractor": "~0.17.0",
     "http-server": "^0.6.1",
-    "bower": "^1.3.1",
     "shelljs": "^0.2.6",
     "eslint": "~0.23.0",
     "eslint-plugin-angular": "0.0.13"
   },
   "scripts": {
-    "postinstall": "bower install",
     "start": "http-server -p 8000",
     "test": "karma start test/karma.conf.js",
     "update-webdriver": "webdriver-manager update",
     "protractor": "protractor test/protractor-conf.js",
-    "test-single-run": "karma start test/karma.conf.js  --single-run",
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    "test-single-run": "karma start test/karma.conf.js  --single-run"
   },
   "eslintConfig": {
     "plugins": [
